# automatic-agent-platform

./: .c8rc.json  .coverage-baseline.json  .dockerignore  .editorconfig  .env  .env.example  .gitignore  .prettierignore  :memory:aa-truth-append-1777951532509  :memory:aa-truth-append-1777954826042  :memory:aa-truth-append-1777955380416  :memory:aa-truth-append-1777955908356  :memory:aa-truth-append-1777956155847  :memory:aa-truth-append-1777957049290  :memory:aa-truth-append-1777957478651  :memory:aa-truth-append-1777958487702  :memory:aa-truth-append-1778049075570  :memory:aa-truth-append-1778169232390  :memory:aa-truth-append-1778381158709  :memory:aa-truth-cost-1777951533522  :memory:aa-truth-cost-1777954827444  :memory:aa-truth-cost-1777955380986  :memory:aa-truth-cost-1777955909398  :memory:aa-truth-cost-1777956157362  :memory:aa-truth-cost-1777957050092  :memory:aa-truth-cost-1777957479259  :memory:aa-truth-cost-1777958488395  :memory:aa-truth-cost-1778049077696  :memory:aa-truth-cost-1778169232678  :memory:aa-truth-cost-1778381158990  :memory:aa-truth-exec-1777951532762  :memory:aa-truth-exec-1777954826438  :memory:aa-truth-exec-1777955380576  :memory:aa-truth-exec-1777955908660  :memory:aa-truth-exec-1777956156119  :memory:aa-truth-exec-1777957049587  :memory:aa-truth-exec-1777957478846  :memory:aa-truth-exec-1777958487892  :memory:aa-truth-exec-1778049076148  :memory:aa-truth-exec-1778169232482  (+68 more)
ui/apps/tauri-linux/src-tauri/: Cargo.toml  tauri.conf.json
ui/apps/tauri-linux/src-tauri/src/: lib.rs
ui/apps/tauri-macos/src-tauri/: Cargo.toml  tauri.conf.json
(+32722 files in other folders)
