[package]
name = "automatic-agent-platform-ui-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
// §R8-55: Tauri updater plugin for macOS auto-update
tauri-plugin-updater = "2"
// §R8-59: Secure storage plugin for Keychain integration
tauri-plugin-secure-storage = "2"
// §R8-55: Tauri updater plugin for macOS auto-update
tauri-plugin-updater = "2"
// §R8-59: Secure storage plugin for Keychain integration
tauri-plugin-secure-storage = "2"
